--- a/eshell/history
+++ b/eshell/history
@@ -1,4 +1,3 @@
-cd quicklisp/
 find ./ -name system-index.txt
 cat *
 cat local-projects/system-index.txt 
@@ -126,3 +125,4 @@ evil-want-fine-undo
 (print fine)
 (setq evil-want-fine-undo t)
 (print evil-want-fine-undo)
+exit
